fixed unwanted wrapping of comment ok button

--- a/themes/timoswelt/style.css
+++ b/themes/timoswelt/style.css
@@ -289,6 +289,7 @@ ul li {
   padding-left:0px;
   padding-right:0px;
   margin-right:2px;
+  white-space: nowrap;
 }
 
 .radio {
